# foosball_rating

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  requirements-dev.txt
backend/: .env.template  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/actions/: create_super_user.py
backend/api/api_v1/: __init__.py  auth.py  fastapi_users.py  players.py  users.py
backend/api/dependencies/: backend.py  fastapi_users.py  strategy.py  users.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  tokens.py
backend/app/core/: celery_app.py  config.py
backend/app/db/: session.py
backend/app/modules/: __init__.py
backend/app/scripts/: __init__.py  ensure_dev_superuser.py
backend/app/tasks/: debug.py
backend/core/: config.py
backend/core/auth/: transport.py  user_manager.py
backend/core/models/: __init__.py  access_token.py  base.py  db_helper.py  player.py  user.py
backend/core/schemas/: user.py
backend/migrations/: README  env.py  script.py.mako
backend/migrations/versions/: 0001_create_users_table.py  0002_create_refresh_tokens_table.py  2025_03_02_2353-dc688c107e7c_create_users_teble.py  (+1 more)
backend/src/: .env.template  main.py
backend/tests/: conftest.py  test_access_tokens.py  test_auth_api.py  test_auth_router.py  test_health.py  test_password_hashing.py  test_user_model.py
backend/utils/: __init__.py
docs/: index.md
(+78 files in other folders)
