[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ya.dvoynih <ya.dvoynih@tensor.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.11"}
pydantic-settings = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
